feat: VIP users
